Api demo pages dummies

--- a/api_demos/public/index.html
+++ b/api_demos/public/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Welcome!</title>
+	<title>apis</title>
 </head>
 <body>
-	It seems that express works fine!
+	<a href="facebook.html">facebook</a>
+	<a href="twitter.html">twitter</a>
+	<a href="instagram.html">instagram</a>
+	<a href="vk.html">vk</a>
 </body>
 </html>
